[package]
name = "piston_learn"
version = "0.1.0"
authors = ["tingfeng-key <1770963469@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = { git = "https://github.com/tomaka/rodio" }
reqwest = "0.9.17"
rust-crypto = "^0.2"
#json = "0.11.13"
rustc-serialize = "0.3.24"
rand = "0.6.5"
nom = "4.2.3"
#actix-web = "0.7.19"
mp3-metadata = "0.3.0"
rtag = "0.3.5"
lazy_static = "1.3.0"
#serde_json = "1.0.39"

