[package]
name = "codec"
version = "0.1.0"
authors = ["tingfeng-key <1770963469@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mp3-duration = "0.1.6"

term = "0.5.2"

log = "0.4.6"

sdl2 = "0.32.2"
piston2d-graphics = "0.32.0"