[package]
name = "ts__music_player"
version = "0.1.0"
authors = ["tingfeng-key <1770963469@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = { git = "https://github.com/tomaka/rodio" }
reqwest = "0.9.17"
rust-crypto = "^0.2"
rustc-serialize = "0.3.24"
mp3-duration = "0.1.6"
term = "0.5.2"