[package]
name = "ts_site"
version = "0.1.0"
authors = ["tingfeng-key <1770963469@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.17"
rust-crypto = "^0.2"
rustc-serialize = "0.3.24"
diesel = "1.4.2"
actix-web = { git = "https://github.com/actix/actix-web" }